--- a/packages/plugin-youtube/statics/styles/items-list.scss
+++ b/packages/plugin-youtube/statics/styles/items-list.scss
@@ -38,6 +38,6 @@
   margin-left: 20px;
 }
 .spinner_container {
-  margin-left: calc(50% - 20px);
-  margin-top: calc(25% - 20px);
+  margin-left: calc(50% - 17px);
+  margin-top: calc(25% - 32px);
 }
