--- a/packages/plugin-youtube/statics/styles/search-input.scss
+++ b/packages/plugin-youtube/statics/styles/search-input.scss
@@ -74,7 +74,7 @@
 .textInput_input {
   border: none;
   border-radius: 0;
-  border-bottom: 2px solid #b2b2b2;
+  border-bottom: 2px solid #7a7a7a;
   width: 459px;
   max-height: 36px;
   margin-right: 24px;
@@ -83,11 +83,12 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding-right: 34px;
   @include phone {
     -webkit-appearance: none;
     border: none;
     border-radius: 0;
-    border-bottom: 2px solid #b2b2b2;
+    border-bottom: 2px solid #7a7a7a;
     width: calc(100vw - 40px);
   }
 }
